--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
+  "nativeModules": {
+    "MyNativeModule": "MyNativeModule"
+  },
   "private": true
 }
